# carga-termica-bovinos

./: .gitignore  README.md  psychrometrics_ashrae_si.py  pyproject.toml  requirements.txt
app/: Thermal_Saturation_Efficiency_Model.py  biothermal_efficiency_index.py  chart_config.yaml  config.py  config.yaml  config_schema.py  extract_comfort_periods.py  generate_article_figures.py  run.py  run_pipeline.py  thermal_comfort_pipeline.py
app/io/: inmet.py
app/pipeline/: density.py  geometry.py  smoothing.py  zones.py
app/pipeline/thermal_comfort/: ITU.py  __init__.py  analysis.py  api.py  cli.py  columns.py  comfort.py  constants.py  dataset.py  entalpia.py  janela_acumulo.py  metrics.py  outputs.py  plotting.py
app/plot/: plot_psychro.py
app/time/: merge.py  utils.py
app/util/: profiling.py
docs/: contrato_colunas_pipeline.md  metodologia_carga_termica.md  pipeline_integrado_1293.md
scripts/: organize_local_changes.sh  run_pipeline_1293.sh
